// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`babel visitor > extracts repeat keys while keeping api on component renders inside render methods 1`] = `
"import { repeat } from "@inglorious/web/directives/repeat";
import { html } from "@inglorious/web";
import { StatCard } from "./stat-card.js";
export const Dashboard = {
  render(entity, api) {
    return html\`<div> \${repeat(entity.statCards, card => card.id, card => StatCard.render(card, api))} </div>\`;
  }
};"
`;

exports[`babel visitor > forwards api to spread-only component renders inside render methods 1`] = `
"import { html } from "@inglorious/web";
import { StatCard } from "./stat-card.js";
export const Dashboard = {
  render(entity, api) {
    return StatCard.render(entity, api);
  }
};"
`;

exports[`babel visitor > imports html only once with multiple jsx elements 1`] = `
"import { html } from "@inglorious/web";
const a = html\`<div></div>\`;
const b = html\`<span></span>\`;
const c = html\`<p></p>\`;"
`;

exports[`babel visitor > imports repeat only once with multiple map calls 1`] = `
"import { repeat } from "@inglorious/web/directives/repeat";
import { html } from "@inglorious/web";
const view = ({
  xs,
  ys
}) => {
  return html\`<div> \${repeat(xs, x => x.id, x => html\`<span .key=\${x.id}>\${x.name}</span>\`)} \${repeat(ys, y => y.id, y => html\`<span .key=\${y.id}>\${y.name}</span>\`)} </div>\`;
};"
`;

exports[`babel visitor > imports when only once with multiple conditional expressions 1`] = `
"import { when } from "@inglorious/web/directives/when";
import { html } from "@inglorious/web";
const a = when(show, () => html\`<div></div>\`);
const b = when(show, () => html\`<span></span>\`);
const c = when(flag, () => html\`<p></p>\`, () => html\`<em></em>\`);"
`;

exports[`babel visitor > injects api into render methods 1`] = `
"import { html } from "@inglorious/web";
import { Form } from "./form.js";
export const App = {
  render(props, api) {
    return api.render("form", "Form", Form);
  }
};"
`;

exports[`babel visitor > injects html, when, and repeat imports 1`] = `
"import { when } from "@inglorious/web/directives/when";
import { html } from "@inglorious/web";
const view = ({
  items,
  show
}) => html\`<div> \${when(show, () => html\`<span>\${items.map(item => html\`<b .key=\${item.id}>\${item.name}</b>\`)}</span>\`)} </div>\`;"
`;

exports[`babel visitor > keeps in-scope components as direct renders 1`] = `
"import { html } from "@inglorious/web";
import { DataGrid } from "./components";
export const App = {
  render(api) {
    return DataGrid.render({
      prop1: "value"
    }, api);
  }
};"
`;

exports[`babel visitor > moves api to the end when it is not already last 1`] = `
"import { html } from "@inglorious/web";
export const App = {
  render(entity, api) {
    return api.render("form");
  }
};"
`;
